[package]
edition = "2018"
authors = ["Yuri Iozzelli <y.iozzelli@gmail.com>"]
description = "A simple TOTP login manager"
name = "totp-cli"
version = "0.2.1"
license = "MIT"

[dependencies]
app_dirs = "1.2.1"
basic-otp = "0.1.1"
console = "0.9.2"
data-encoding = "2.2.0"
pbr = "1.0.2"
serde = "1.0.104"
serde_derive = "1.0.104"
structopt = "0.3.11"
toml = "0.5.6"
clap = "2.33.0"
